--- a/views/newProduct.hbs
+++ b/views/newProduct.hbs
@@ -1,17 +1,19 @@
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 ">
     <h1>New Product</h1>
         <form action="/products" method="POST">
-        <label for="name">Name</label>
-        <input id="name" type="text" name="name">
-        <br>
-        <label for="photo">Photo</label>
-        <input type="text" id="photo" name="photo">
-        <br>
-        <label for="stock">Stock</label>
-        <input type="text" name="stock" id="stock">
-        <br>
-        <button type="submit" class="btn btn-primary">Submit</button> 
+            <div class="form-group">
+                    <label for="name">Name</label>
+                    <input id="name" type="text" name="name" class="form-control">
+                    <br>
+                    <label for="photo">Photo</label>
+                    <input type="text" id="photo" name="photo" class="form-control">
+                <br>
+                <label for="stock">Stock</label>
+                <input type="text" name="stock" id="stock" class="form-control">
+                <br>
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button> 
+            </div>
         </form>
     </div>
 </div>
